 -- Prevent slurmctld from starting with invalid jobcomp plugin.
 -- Fix `sinfo -i` and interactive `scontrol> show node` replies for nodes
    going from powering down to powered down state.
 -- auth/jwt - support Azure (among other) JWKS files by preferring x5c field
    over locally reconstructing an RSA256 key file.

* Changes in Slurm 22.05.5
==========================
 -- Fix node becoming IDLE while in an invalid registration state.
 -- When a job is completing avoid potential dereference.
 -- Avoid setting preempt_time for a job erroneously.
 -- Fix situation where we don't requeue correctly when a job is finishing.
 -- job_container/tmpfs - Avoid leaking namespace file descriptor.
 -- common/slurm_opt - fix memory leak in client commands or slurmrestd when the
    --chdir option is set after option reset.
 -- openapi/dbv0.0.38 - gracefully handle unknown associations assigned to jobs.
 -- openapi/dbv0.0.38 - query all associations to avoid errors while dumping jobs.
 -- Load hash plugin at slurmstepd launch time to prevent issues loading the
    plugin at step completion if the Slurm installation is upgraded.
 -- Fix gcc 12.2.1 compile errors.
 -- Fix future magnetic reservations preventing heterogeneous jobs from
    starting.
 -- Prevent incorrect error message from being generated for operator/admins
    using the 'scontrol top' command.
 -- slurmrestd - correct issue where larger requests could result in a single
    byte getting removed from inside of the POST request.

* Changes in Slurm 22.05.4
==========================
 -- Fix return code from salloc when the job is revoked prior to executing user
    command.
 -- Fix minor memory leak when dealing with gres with multiple files.
 -- Fix printing for no_consume gres in scontrol show job.
 -- sinfo - Fix truncation of very large values when outputting memory.
 -- Fix multi-node step launch failure when nodes in the controller aren't in